--- a/package.json
+++ b/package.json
@@ -3,21 +3,20 @@
   "version": "1.0.0",
   "author": "Foraker Labs",
   "description": "A TinyMCE plugin for editing equations using Mathquill",
-  "licenses": [
-    {
-      "type": "MIT",
-      "url": "http://github.com/foraker/tinymce_equation_editor/raw/master/LICENSE"
-    }
-  ],
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/foraker/tinymce_equation_editor.git"
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
+  },
+  "dependencies": {
+    "ckeditor5": "^44.0.0"
   },
   "devDependencies": {
     "gulp": ">=3.8.7",
     "gulp-coffee": ">=2.1.2",
     "gulp-concat": ">=2.3.4",
     "gulp-uglify": ">=0.3.1",
-    "gulp-zip": ">=2.0.1"
+    "gulp-zip": ">=2.0.1",
+    "vite": "^5.2.0"
   }
 }
