--- a/package.json
+++ b/package.json
@@ -6,17 +6,21 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "convert": "node scripts/converter.js",
+    "postinstall": "yarn convert"
   },
   "dependencies": {
     "ckeditor5": "^44.0.0"
   },
   "devDependencies": {
-    "gulp": ">=3.8.7",
-    "gulp-coffee": ">=2.1.2",
-    "gulp-concat": ">=2.3.4",
-    "gulp-uglify": ">=0.3.1",
-    "gulp-zip": ">=2.0.1",
+    "@babel/core": "^7.24.0",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.18.6",
+    "@babel/plugin-proposal-optional-chaining": "^7.21.0",
+    "@babel/plugin-transform-class-properties": "^7.23.3",
+    "@babel/preset-env": "^7.24.0",
+    "coffeescript": "^2.7.0",
+    "mkdirp": "^3.0.1",
     "vite": "^5.2.0"
   }
 }
