--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "lib": ["dom", "ESNext"],
     "target": "es5",
     "module": "commonjs",
     "resolveJsonModule": true,
